# RegistrationApp

./: Cargo.toml
src/: main.rs
src/models/: user.rs
src/routes/: mod.rs
tests/: auth_tests.rs
