[package]
name = "barbershop"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2.0"
bcrypt = "0.17.0"
uuid = { version = "1.7", features = ["v4"] }
lazy_static = "1.4.0"
tokio = { version = "1"}
tokio-postgres = "0.7"
dotenvy = "0.15"
chrono = "0.4"