[package]
name = "barbershop"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
jsonwebtoken = "9"
bcrypt = "0.15"
tokio-postgres = "0.7"
dotenvy = "0.15"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
